0.8.7: BETA
     - added mising contact button
0.8.6: 2013/7/8
     - fixed cookie related bug
     - added head toggle
     - fixed file link sorting bug
     - fixed SMB share alias bug
     - fixed SMB secure flag related Zip download bug
     - fixed navigation while loading bug
     - added column setup suppport to the simple view
     - added context menu to the simple view
     - fixed SysInfo and PropertiesViewer extension do not work bug 

0.8.5: 2013/21/5
     - fixed text save bug 
     - fixed AFS related uppercase username bug
     - repo update
     - fixed symlink on virtual link bug
     - added simple view 
     - fixed unreadable but writeable file move bug
     - fixed AFS performance bug
     - fixed ZIP file upload bug
     - fixed missing modules in checkenv script bug
     - fixed potential security bug reported by Jose Marques <jmcm1@st-andrews.ac.uk>

0.8.4: 2013/18/3
     - fixed typos in doc
     - fixed security bug in helper/webdavwrapper-krb.c
     - added Speedy support for the AFS backend
     - fixed missing content-length in thumbnail responses bug
     - fixed missing cache control 
     - fixed ACL bug (thanx Thomas Klose <thomas.klose@gmx.com>)
     - added wrappers for a mod_auth_kerberos free authentication for SMB and AFS backend
     - added username/password/workgroup authentication support for SMB backend
     - improved logout-dist script (thanx Christan Affolter <christian.affolter@purblehaze.ch>
     - fixed quota related insufficient storage bug reported by Jean-François Brison

0.8.3: 2012/6/6
     - fixed typos
     - added virtual link support to the FS/AFS/GFS backends
     - fixed temporary space consumption bug after ZIP file upload in the SMB/DBB backend (thx Aleksander Gudalo) 
     - added revision limit for a file to RCS backend (maxrevisions option)
     - fixed Kerberos ticket copying bug (changed helper/webdavwrapper-smb.c)

0.8.2: 2012/23/2
     - fixed doc
     - fixed deprecated hash handling