@@ -1,5 +1,6 @@
 0.8.7: BETA
      - added mising contact button
+     - fixed directory access check for the SMB backend
 0.8.6: 2013/7/8
      - fixed cookie related bug
      - added head toggle
